# korea-stock-mcp

./: .gitignore  README.md  pyproject.toml
configs/: env.example
docs/: design.md
src/korea_stock_mcp/: __init__.py  __main__.py  config.py  mock_data.py  models.py  server.py  services.py
src/korea_stock_mcp/adapters/: __init__.py  base.py  dart.py  krx.py  publicdata.py
tests/: test_service.py
